--- a/ProyectoReact/package.json
+++ b/ProyectoReact/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@mui/styled-engine-sc": "^5.11.9",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
